# claude-hook

./: .gitignore  README.md  main.py  pyproject.toml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
src/claude_hooks/: cli.py
src/claude_hooks/core/: events.py  parser.py
tests/: test_cli.py  test_events.py
